# pygenai

./: CMakeLists.txt  Dockerfile  requirements.txt
app/: genai_model.cpp  main.py
